--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "prebuild": "shx rm -r ../backend/static/frontend/build || true",
-    "build": "tsc && vite build",
+    "dev": "vite --port 3000",
+    "build": "tsc && vite build --emptyOutDir",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
