--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/main.js",
   "scripts": {
-    "dev": "tsnd --rs src/main.ts",
+    "dev": "tsnd --rs mock_system/app.ts",
     "prebuild": "shx rm -r ./dist || true",
     "build": "tsc",
     "serve": "node .",
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/iambpn/auths#readme",
   "devDependencies": {
+    "@jest/globals": "^29.6.4",
     "@types/express": "^4.17.17",
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
