--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
     "prebuild": "shx rm -r ./dist || true",
     "build": "tsc",
     "serve": "node .",
+    "drizzle:generate": "drizzle-kit generate:sqlite --config=./drizzle.config.js",
+    "drizzle:drop": "drizzle-kit drop --config=./drizzle.config.js",
+    "drizzle:studio": "AUTHS_DB_PATH=./mock_system/dev.sqlite drizzle-kit studio",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,13 +25,18 @@
   "homepage": "https://github.com/iambpn/auths#readme",
   "devDependencies": {
     "@jest/globals": "^29.6.4",
+    "@types/better-sqlite3": "^7.6.4",
     "@types/express": "^4.17.17",
+    "drizzle-kit": "^0.19.13",
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "better-sqlite3": "^8.5.2",
+    "drizzle-orm": "^0.28.5",
+    "express": "^4.18.2",
+    "kysely": "^0.26.3"
   }
 }
