--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,10 @@
   "dependencies": {
     "better-sqlite3": "^8.5.2",
     "drizzle-orm": "^0.28.5",
+    "drizzle-zod": "^0.5.1",
     "express": "^4.18.2",
-    "kysely": "^0.26.3"
+    "kysely": "^0.26.3",
+    "zod": "^3.22.2",
+    "zod-validation-error": "^1.5.0"
   }
 }
