--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,6 @@
     "drizzle-zod": "^0.5.1",
     "express": "^4.18.2",
     "kysely": "^0.26.3",
-    "zod": "^3.22.2",
-    "zod-validation-error": "^1.5.0"
+    "zod": "^3.22.2"
   }
 }
