--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,9 @@
     "build": "tsc",
     "serve": "node .",
     "drizzle:generate": "drizzle-kit generate:sqlite --config=./drizzle.config.js",
+    "drizzle:push": "AUTHS_DB_URI=./mock_system/dev.sqlite drizzle-kit push:sqlite --config=./drizzle.config.js",
     "drizzle:drop": "drizzle-kit drop --config=./drizzle.config.js",
-    "drizzle:studio": "AUTHS_DB_PATH=./mock_system/dev.sqlite drizzle-kit studio",
+    "drizzle:studio": "AUTHS_DB_URI=./mock_system/dev.sqlite drizzle-kit studio",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "@jest/globals": "^29.6.4",
     "@types/better-sqlite3": "^7.6.4",
     "@types/express": "^4.17.17",
+    "@types/uuid": "^9.0.3",
     "drizzle-kit": "^0.19.13",
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
@@ -34,11 +36,14 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "better-sqlite3": "^8.5.2",
     "drizzle-orm": "^0.28.5",
     "drizzle-zod": "^0.5.1",
     "express": "^4.18.2",
     "kysely": "^0.26.3",
+    "uuid": "^9.0.0",
     "zod": "^3.22.2"
   }
 }
