--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@jest/globals": "^29.6.4",
     "@types/better-sqlite3": "^7.6.4",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/uuid": "^9.0.3",
     "drizzle-kit": "^0.19.13",
     "jest": "^29.6.4",
@@ -42,7 +43,7 @@
     "drizzle-orm": "^0.28.5",
     "drizzle-zod": "^0.5.1",
     "express": "^4.18.2",
-    "kysely": "^0.26.3",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.0",
     "zod": "^3.22.2"
   }
