--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -106,5 +106,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["./example"]
+  "exclude": ["./example", "./dist", "./src/test", "./src/**/__mocks__/*.ts", "./src/**/*.test.ts"]
 }
