--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,5 +53,8 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "volta": {
+    "node": "16.20.2"
   }
 }
