fixing production link issues

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,1 +1,2 @@
-DEV_BASE_URL="http://localhost:8080/auths"
+DEV_BASE_URL="http://localhost:8080"
+VITE_PRODUCTION_PATH_PREFIX="/auths" # must start with /
