--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iambpn/auths",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/main.js",
   "scripts": {
@@ -53,6 +53,21 @@
     "./dist/**/*",
     "./public/**/*",
     "./drizzle/**/*"
+  ],
+  "keywords": [
+    "nodejs",
+    "typescript",
+    "authorization",
+    "authentication",
+    "built in authentication",
+    "built in authorization",
+    "RBAC",
+    "Role Based Access Control",
+    "express",
+    "express-js",
+    "dashboard",
+    "auths",
+    "iambpn"
   ],
   "volta": {
     "node": "16.20.2"
