improving docs and testing in postgres db

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,7 @@ sqlite_uri=./example/dev.sqlite
 pg_host=localhost
 pg_port=5432
 pg_user=postgres
-pg_password=passowrd
+pg_password=password
 pg_db=auths
 pg_test_db=test_auths
 
@@ -16,3 +16,6 @@ mysql_user=mysql
 mysql_password=password
 mysql_db=auths
 mysql_test_db=test_auths
+
+# Example APP
+example_app_driver=sqlite
